# consciousai

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  publish_to_github.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: docker-compose.yml
examples/: algorithm_suite_demo.py  drone_fleet.py  quick_start.py
scripts/: setup.sh
src/: __init__.py
src/algorithms/: __init__.py  adaptive_threshold.py  causal_emergence.py  change_point.py  integration_distance.py  temporal_integration.py
src/benchmarks/: ucr_benchmark.py
src/core/: __init__.py  connectivity.py  engine.py  framework.py  numba_kernels.py  phi_calculator.py  phi_calculator_complete.py
src/domains/: __init__.py  financial_risk.py  llm_probing.py
src/security/: __init__.py  blockchain_ip.py  security_engine.py
src/utils/: __init__.py  optimizations.py  usage_guide.py
tests/benchmarks/: benchmark_numba.py  benchmark_phi.py  benchmark_vs_market.py
tests/integration/: test_integration.py
tests/unit/: test_algorithms.py  test_engine.py
