[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "consciousai"
version = "3.0.0"
description = "Integrated Information Theory for Autonomous Systems"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Walter Calmels", email = "walter@tuch.systems" }]
requires-python = ">=3.8"
keywords = ["consciousness", "IIT", "autonomous systems", "drones", "phi", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
fast = [
    "numba>=0.56.0",
    "scipy>=1.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = ["consciousai[fast,dev]"]

[project.urls]
Homepage = "https://consciousai.io"
Repository = "https://github.com/tuch-systems/consciousai"
Documentation = "https://docs.consciousai.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
